<resources>
    <string name="app_name">AdrianSkrobacz-sensors</string>
    <string name="gps">GPS</string>
    <string name="raw_sensor_data">Surowe dane</string>
    <string name="combined_section">Obrobione dane</string>
    <string name="compass">Kompas 3D</string>
    <string name="accelerometer">Akcelerometr</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="author">Adrian Skrobacz</string>
    <string name="sensors">Sensory</string>
    <string name="telephony">Telefon</string>
    <string name="open">Otwórz</string>
    <string name="close">Zamknij</string>
    <string name="wifi">Wi-Fi</string>
    <string name="unable_to_discover">Nie udało się wyszukać urządzeń</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bt_needed">BT musi być włączony, aby ta zakładka działała</string>
    <string name="bounded_devices">Sparowane urządzenia</string>
    <string name="found_devices">Znalezione urządzenia</string>
    <string name="none">Brak</string>
    <string name="contacts">Kontakty</string>
    <string name="allow_read_contacts_to_work">Musisz zezwolić na odczyt kontaktów, aby ta zakładka działała</string>
    <string name="allow_location_to_scan">Musisz zezwolić na lokalizację, aby móc wyszukać sieci WiFi</string>
    <string name="allow_read_sms_to_work">Musisz zezwolić na odczyt SMS, aby ta zakładka działała</string>
    <string name="sms">SMS</string>
</resources>
