<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/sensors"
            android:checked="true"
            android:title="@string/sensors"/>

        <item
            android:id="@+id/telephony"
            android:checked="false"
            android:title="@string/telephony"/>

        <item
            android:id="@+id/wifi"
            android:checked="false"
            android:title="@string/wifi"/>

        <item
            android:id="@+id/bluetooth"
            android:checked="false"
            android:title="@string/bluetooth"/>

        <item
            android:id="@+id/contacts"
            android:checked="false"
            android:title="@string/contacts"/>

        <item android:id="@+id/sms"
              android:title="@string/sms"
              android:checked="false" />
    </group>
</menu>